--- a/package.json
+++ b/package.json
@@ -18,3 +18,12 @@
     "ws": "^7.2.1"
   }
 }
+
+// "bcrypt": "^3.0.7",
+//     "cookie-session": "^1.3.3",
+//"nodemon": "^2.0.2",
+
+// "scripts": {
+//   "start": "nodemon index.js",
+//   "start:dev": "nodemon index.js",
+// },
