--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "reset": "psql -U development -d forget_development < ./src/db/schema/create.sql && psql -U development -d forget_development < ./src/db/schema/development.sql"
-    },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "bcrypt": "^3.0.7",
+    "body-parser": "^1.18.3",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "pg": "^7.17.0",
-    "socket.io": "^2.3.0",
-    "ws": "^7.2.1"
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "helmet": "^3.18.0",
+    "nodemon": "^2.0.2",
+    "pg": "^7.8.1",
+    "socket.io": "^2.2.0",
+    "ws": "^7.0.0"
   }
 }
-
