--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "helmet": "^3.18.0",
     "nodemon": "^2.0.2",
     "pg": "^7.8.1",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "socket.io": "^2.2.0",
     "ws": "^7.0.0"
   }
